--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -8,7 +8,13 @@
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
 <!-- here you can include so many js-files as you want -->
-<script type="text/javascript" src="widgets/time-switch/js/time-switch.js"></script>
+<script type="module" src="widgets/time-switch/js/time-switch.js"></script>
+<script type="module">
+	import {TobiTest} from "./widgets/time-switch/js/Tesclass.js";
+
+	const t = new TobiTest();
+	console.log('hi from module')
+</script>
 
 <!-- the full description of format in data-vis-attrs can be found here:
 	https://github.com/ioBroker/ioBroker.vis/blob/master/www/js/visEditInspect.js#L39
@@ -99,28 +105,29 @@
 	You can do "if" conditions and "for" cycles.
 
 -->
-<script id="tplTime-switchShowInstance"
+<script id="tplTime-switchDevicePlan"
 		type="text/ejs"
 		class="vis-tpl"
 		data-vis-prev='<div id="prev_tplMysetShowInstance" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
-		data-vis-attrs="oid/id;myColor/color;htmlText/text;"
-		data-vis-attrs0="group.extraTime-switch;extraAttr"
+		data-vis-attrs="oid/id;"
 		data-vis-set="time-switch"
-		data-vis-type="helper"
-		data-vis-name="Show instance">
-	<div class="vis-widget <%== this.data.attr('class') %>" style="width:230px; height:210px;" id="<%= this.data.attr('wid') %>" >
-		<div class="time-switch-class vis-widget-body <%== this.data.attr('class') %>" style="padding:2px" >
-			OID: <%= this.data.attr('oid') %><br>
-			OID value: <%== vis.states[this.data.attr('oid') + '.val'] %><br>
-			Color: <span style="color: <%= this.data.attr('myColor') %>"><%= this.data.attr('myColor') %></span><br>
-			extraAttr: <%== this.data.attr('extraAttr') %><br>
-			Browser instance: <%= vis.instance %><br>
-			htmlText: <textarea readonly style="width: calc(100% - 10px)"><%== this.data.attr('htmlText') %></textarea><br>
-		</div>
+		data-vis-type="ctrl"
+		data-vis-name="Device plan">
+	<% console.log(vis.binds); vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
+	<div style="width:230px; height:210px;" id="<%= this.data.attr('wid') %>">
+		<h1>StateId:</h1>
+		<p><%= this.data.attr('stateId') %></p>
+		<h1>Actions:</h1>
+		<ul>
+        	<% vis.binds['time-switch'].actions.each(function(e) { %>
+        		<li><%= e.text %></li>
+        	<% }); %>
+    	</ul>
 	</div>
 </script>
 
-<script id="tplTime-switchHelper"
+<!--		<p>StateId: <%= vis.binds['time-switch'].device.attr('stateId') %> </p>-->
+<!--<script id="tplTime-switchHelper"
 		type="text/ejs"
 		class="vis-tpl"
 		data-vis-prev='<div id="prev_tplTime-switchHelper" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
@@ -133,3 +140,8 @@
 		vis.binds.time-switch.createWidget(this.data.wid, this.view, this.data, this.style);
 	%></div>
 </script>
+
+<div class="time-switch-class vis-widget-body" style="padding:2px" >
+			OID: <%= this.data.attr('oid') %><br>
+			OID value: <%== vis.states[this.data.attr('oid') + '.val'] %><br>
+</div>-->
