--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -7,14 +7,9 @@
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
+<link rel="stylesheet" href="widgets/time-switch/css/material-button.css" />
 <!-- here you can include so many js-files as you want -->
 <script type="module" src="widgets/time-switch/js/time-switch.js"></script>
-<script type="module">
-	import {TobiTest} from "./widgets/time-switch/js/Tesclass.js";
-
-	const t = new TobiTest();
-	console.log('hi from module')
-</script>
 
 <!-- the full description of format in data-vis-attrs can be found here:
 	https://github.com/ioBroker/ioBroker.vis/blob/master/www/js/visEditInspect.js#L39
@@ -109,39 +104,23 @@
 		type="text/ejs"
 		class="vis-tpl"
 		data-vis-prev='<div id="prev_tplMysetShowInstance" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
-		data-vis-attrs="oid/id;"
+		data-vis-attrs="dataId/id"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
 		data-vis-name="Device plan">
 	<% vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
-	<div style="width:230px; height:210px;" id="<%= this.data.attr('wid') %>">
+	<div style="width:100%; height: auto;" id="<%= this.data.attr('wid') %>">
 		<h1>StateId:</h1>
 		<p class="state-id"></p>
 		<h1>Actions:</h1>
-		<ul class="actions">
-    	</ul>
+		<div class="actions"></div>
+
+		<!--Subscribe to states because otherwise vis does not recognize that these id's are needed -->
+		<div style="display: none">
+			<%= this.data.attr('dataId') %>
+			<%== vis.states[this.data.attr('dataId') + '.val'] %>
+			<%== vis.states[this.data.attr('dataId') + '.actions.val'] %>
+			<%== vis.states[this.data.attr('dataId') + '.id.val'] %>
+		</div>
 	</div>
 </script>
-
-<!--        	<% vis.binds['time-switch'].scheduleByWidgetId.attr(this.data.attr('oid')).attr('actions').each(function(e) { %>-->
-<!--        		<li><%= e.text %></li>-->
-<!--        	<% }); %>-->
-<!--		<p>StateId: <%= vis.binds['time-switch'].device.attr('stateId') %> </p>-->
-<!--<script id="tplTime-switchHelper"
-		type="text/ejs"
-		class="vis-tpl"
-		data-vis-prev='<div id="prev_tplTime-switchHelper" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
-		data-vis-attrs="oid/id;myColor/color;htmlText/text;"
-		data-vis-attrs0="group.extraTime-switch;extraAttr"
-		data-vis-set="time-switch"
-		data-vis-type="helper"
-		data-vis-name="Helper">
-	<div class="vis-widget <%== this.data.attr('class') %>" style="overflow:visible; width: 230px; height: 210px" id="<%= this.data.attr('wid') %>"><%
-		vis.binds.time-switch.createWidget(this.data.wid, this.view, this.data, this.style);
-	%></div>
-</script>
-
-<div class="time-switch-class vis-widget-body" style="padding:2px" >
-			OID: <%= this.data.attr('oid') %><br>
-			OID value: <%== vis.states[this.data.attr('oid') + '.val'] %><br>
-</div>-->
