--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -104,7 +104,7 @@
 		type="text/ejs"
 		class="vis-tpl"
 		data-vis-prev='<div id="prev_tplMysetShowInstance" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
-		data-vis-attrs="dataId/id"
+		data-vis-attrs="dataId/id/onDataIdChange;"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
 		data-vis-name="Device plan">
@@ -114,13 +114,5 @@
 		<p class="state-id"></p>
 		<h1>Actions:</h1>
 		<div class="actions"></div>
-
-		<!--Subscribe to states because otherwise vis does not recognize that these id's are needed -->
-		<div style="display: none">
-			<%= this.data.attr('dataId') %>
-			<%== vis.states[this.data.attr('dataId') + '.val'] %>
-			<%== vis.states[this.data.attr('dataId') + '.actions.val'] %>
-			<%== vis.states[this.data.attr('dataId') + '.id.val'] %>
-		</div>
 	</div>
 </script>
