feat(widget): changed widget name

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -112,7 +112,7 @@
 		data-vis-attrs="dataId/id/onDataIdChange;stateId/id/onStateIdChange"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
-		data-vis-name="Device plan">
+		data-vis-name="Device-Plan">
 	<% vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
 	<div style="width:100%; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget">
 		<h1></h1>
