--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -108,11 +108,11 @@
 <script id="tplTime-switchDevicePlan"
 		type="text/ejs"
 		class="vis-tpl"
-		data-vis-prev='<div id="prev_tplMysetShowInstance" style="position: relative; text-align: initial;padding: 4px "><div class="vis-widget_prev " style="width: 280px; height: 159px;" > <div class="myset-class vis-widget-prev-body " style="padding:2px"> OID: hm-rpc.0.EEQ0006629.1.STATE<br> OID value: true<br> Color: <span style="color: rgb(128, 0, 0);">#800000</span><br> htmlText: <textarea readonly="" style="width:100%">asda</textarea></div>'
+		data-vis-prev='<img src="widgets/time-switch/img/prev/prev-device-schedule.jpg"></img>'
 		data-vis-attrs="dataId/id/onDataIdChange;stateId/id/onStateIdChange;onValue[true]/string/onOnValueChange;offValue[false]/string/onOffValueChange"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
-		data-vis-name="Device-Plan">
+		data-vis-name="Device-Schedule">
 	<% vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
 	<div style="width:100%; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget">
 		<div class="heading">
