Change initial size of widget

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -114,7 +114,7 @@
 		data-vis-type="ctrl"
 		data-vis-name="Device-Schedule">
 	<% vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
-	<div style="width:100%; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget">
+	<div style="width:300px; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget">
 		<div class="heading">
 			<div class="view">
 				<h1></h1>
