Reduce size of widget preview image

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -108,7 +108,7 @@
 <script id="tplTime-switchDevicePlan"
 		type="text/ejs"
 		class="vis-tpl"
-		data-vis-prev='<img src="widgets/time-switch/img/prev/prev-device-schedule.jpg"></img>'
+		data-vis-prev='<img src="widgets/time-switch/img/prev/prev-device-schedule.jpg" width="110px"></img>'
 		data-vis-attrs="dataId/id/onDataIdChange;stateId/id/onStateIdChange;onValue[true]/string/onOnValueChange;offValue[false]/string/onOffValueChange"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
