--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -12,11 +12,14 @@
 <link rel="stylesheet" href="widgets/time-switch/css/material-radio-button.css" />
 <link rel="stylesheet" href="widgets/time-switch/css/material-toggle-switch.css" />
 <!-- here you can include so many js-files as you want -->
-<script src="widgets/time-switch/js/SetStateValueActionWidget.js"></script>
+<script src="widgets/time-switch/js/OnOffScheduleWidget.js"></script>
+<script src="widgets/time-switch/js/TriggerWithAction.js"></script>
 <script src="widgets/time-switch/js/TimeTrigger.js"></script>
 <script src="widgets/time-switch/js/Weekdays.js"></script>
+<script src="widgets/time-switch/js/OnOffStateAction.js"></script>
 <script type="module" src="widgets/time-switch/js/time-switch.js"></script>
-<!-- the full description of format in data-vis-attrs can be found here:
+
+<!-- the full description of format in settings-vis-attrs can be found here:
 	https://github.com/ioBroker/ioBroker.vis/blob/master/www/js/visEditInspect.js#L39
 
 	----------------------------------------------------------
@@ -28,7 +31,7 @@
 		"type" and "class" are always the same. "id" is unique and must start with "tplSETNAME" and ends with widget name. Use camel-case for it.
 
 	----------------------------------------------------------
-	data-vis-attrs - divided with semicolon the list of attributes, like attr1/id;attr2/color
+	settings-vis-attrs - divided with semicolon the list of attributes, like attr1/id;attr2/color
 		Full format of one attribute is: attr_name(start-end)[default_value]/type,idFilter/onChangeFunc
 			attr_name - the name of the attribute, e.g. "myID"
 			start-end - creates automatically attributes from attr_namestart to attr_nameend, like "myID(1-3)" creates myID1, myID2, myID3
@@ -58,11 +61,11 @@
 				If type is "id", you can define filer for "Select ID Dialog", like "myID/id,level.temperature".
 				Additionally you can define callback(onChangeFunc), which will be called if this attribute was changed by user for different purposes: validate entry, fill other attributes, ...
 
-		You can define additional data-vis-attrs line: data-vis-attrs0, data-vis-attrs1. Anyway data-vis-attrs must be there. You may not skip numbers.
-		E.g. in "data-vis-attrs="A;" data-vis-attrs1="B" attribute B will be not parsed.
+		You can define additional settings-vis-attrs line: settings-vis-attrs0, settings-vis-attrs1. Anyway settings-vis-attrs must be there. You may not skip numbers.
+		E.g. in "settings-vis-attrs="A;" settings-vis-attrs1="B" attribute B will be not parsed.
 
 	--------------------------------------------------------
-	data-vis-type
+	settings-vis-type
 		Help information for user. Used for search.
 		You can define more than one type divided by comma.
 		There are following common types, but you can use your own specific types:
@@ -75,25 +78,25 @@
 			...
 
 	--------------------------------------------------------
-	data-vis-set
+	settings-vis-set
 		Name of the widget set. Must be equal to the name of this HTML file
 
 	--------------------------------------------------------
-	data-vis-prev
+	settings-vis-prev
 		Html code used as preview of this widget. If widget is complex you can just use image as preview:
-		data-vis-prev='<img src="widgets/hqwidgets/img/prev/Prev_tplTime-switchShowInstance.png"></img>'
+		settings-vis-prev='<img src="widgets/hqwidgets/img/prev/Prev_tplTime-switchShowInstance.png"></img>'
 		Of course the image must exist.
 
 	--------------------------------------------------------
-	data-vis-name
+	settings-vis-name
 		Readable name of widget shown in vis editor.
 
 	--------------------------------------------------------
-	data-vis-beta="true"
+	settings-vis-beta="true"
 		Shows "BETA" symbol in vis editor by preview
 
 	--------------------------------------------------------
-	data-vis-update-style="true"
+	settings-vis-update-style="true"
 		Call redraw of widget if some of the CSS styles in editor for this widget was changed
 
 	You can read about Magic tags here: http://canjs.com/guides/EJS.html
@@ -109,37 +112,19 @@
 		type="text/ejs"
 		class="vis-tpl"
 		data-vis-prev='<img src="widgets/time-switch/img/prev/prev-device-schedule.jpg" width="110px"></img>'
-		data-vis-attrs="dataId/id/onDataIdChange;stateId/id/onStateIdChange;onValue[true]/string/onOnValueChange;offValue[false]/string/onOffValueChange"
+		data-vis-attrs="
+			dataId/id/onDataIdChange;
+			showId[true]/checkbox;
+			showManualSwitch[true]/checkbox;
+			valueType[boolean]/select,boolean,string,number/onValueTypeChange;
+			offValue/string;
+			onValue/string;
+			statesCount[1]/number,1,10,1;
+			stateId(1-statesCount)/id/onStateIdChange"
 		data-vis-set="time-switch"
 		data-vis-type="ctrl"
-		data-vis-name="Device-Schedule">
-	<% vis.binds['time-switch'].createWidget(this.data.wid, this.view, this.data, this.style); %>
-	<div style="width:300px; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget">
-		<div class="heading">
-			<div class="view">
-				<h1></h1>
-				<img class="button edit" src="widgets/time-switch/img/edit-24px.svg" width="28px" height="28px"/>
-			</div>
-			<div class="edit" style="display: none;">
-				<input type="text">
-				<img class="button save" src="widgets/time-switch/img/save-24px.svg" width="28px" height="28px"/>
-			</div>
-		</div>
-		<div id="switched-oid"><%= this.data.attr('stateId')%></div>
-		<div id="enabled" class="md-switch-container">
-  			<div class="md-switch-track"></div>
-  			<div class="md-switch-handle"></div>
-  			<div class="md-switch-label">Automatic switching enabled</div>
-		</div>
-		<div id="current-value" class="md-switch-container">
-  			<div class="md-switch-track"></div>
-  			<div class="md-switch-handle"></div>
-  			<div class="md-switch-label">Current value</div>
-		</div>
-		<div id="add">
-			<img class="button add" src="widgets/time-switch/img/add-24px.svg" width="28px" height="28px"/>
-		</div>
-		<div class="actions"></div>
-	</div>
+		data-vis-name="Schedule (On/Off)">
+	<% vis.binds['time-switch'].createOnOffWidget(this.data.wid, this.view, this.data, this.style); %>
+		<div style="width:300px; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget"></div>
 </script>
 
