Admin: Set default enabled value to false

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -61,7 +61,7 @@
 						<td id="">time-switch.0.onoff.${id}.data</td>
 						<td>${scheduleData.name}</td>
 						<td>${scheduleData.triggers.length}</td>
-						<td>true</td>
+						<td class="translate">false</td>
 						<td>
 							<a class="delete-schedule values-buttons btn-floating btn-small waves-effect waves-light red"><i class="material-icons" title="Remove schedule">delete</i></a>
 						</td>
