--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -4,6 +4,8 @@
 	version: "1.1.0"
 
 	Copyright 2019 walli545 walli5446@gmail.com
+
+	Change counter: 4
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
@@ -126,4 +128,3 @@
 	<% vis.binds['time-switch'].createOnOffWidget(this.data.wid, this.view, this.data, this.style); %>
 		<div style="width:300px; height: auto;" id="<%= this.data.attr('wid')%>" class="time-switch-widget vis-widget"></div>
 </script>
-
