--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -5,7 +5,7 @@
 
 	Copyright 2019 walli545 walli5446@gmail.com
 
-	Change counter: 14
+	Change counter: 15
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="widgets/time-switch/css/material-radio-button.css" />
 <link rel="stylesheet" href="widgets/time-switch/css/material-toggle-switch.css" />
 <!-- here you can include so many js-files as you want -->
+<script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 <script src="widgets/time-switch/js/OnOffScheduleWidget.js"></script>
 <script src="widgets/time-switch/js/TriggerWithAction.js"></script>
 <script src="widgets/time-switch/js/TimeTrigger.js"></script>
