Admin: Fix translations

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -63,13 +63,13 @@
 						<td>${scheduleData.triggers.length}</td>
 						<td class="translate">false</td>
 						<td>
-							<a class="delete-schedule values-buttons btn-floating btn-small waves-effect waves-light red"><i class="material-icons" title="${vis.binds['time-switch'].translate('removeSchedule')}">delete</i></a>
+							<a class="delete-schedule values-buttons btn-floating btn-small waves-effect waves-light red"><i class="material-icons" title="${translateWord('removeSchedule')}">delete</i></a>
 						</td>
 					</tr>
 				`;
 				socket.emit('getState', `${adapter}.${instance}.onoff.${id}.enabled`, (error, state) => {
 					if(state) {
-						let enabledText = vis.binds['time-switch'].translate(state.val ? 'true' : 'false');
+						let enabledText = translateWord(state.val ? 'true' : 'false');
 						$(`#schedules tr#${id}`).children('td').eq(3).text(enabledText);
 					}
 				});
