Widget: Add astro trigger

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -5,7 +5,7 @@
 
 	Copyright 2019 walli545 walli5446@gmail.com
 
-	Change counter: 16
+	Change counter: 17
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
@@ -18,6 +18,7 @@
 <script src="widgets/time-switch/js/OnOffScheduleWidget.js"></script>
 <script src="widgets/time-switch/js/TriggerWithAction.js"></script>
 <script src="widgets/time-switch/js/TimeTrigger.js"></script>
+<script src="widgets/time-switch/js/AstroTrigger.js"></script>
 <script src="widgets/time-switch/js/Weekdays.js"></script>
 <script src="widgets/time-switch/js/OnOffStateAction.js"></script>
 <script type="module" src="widgets/time-switch/js/time-switch.js"></script>
