--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -5,7 +5,7 @@
 
 	Copyright 2019 walli545 walli5446@gmail.com
 
-	Change counter: 18
+	Change counter: 19
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
@@ -118,6 +118,7 @@
 			dataId/id/onDataIdChange;
 			showId[true]/checkbox;
 			showManualSwitch[true]/checkbox;
+			useAstroIcons[false]/checkbox;
 			valueType[boolean]/select,boolean,string,number/onValueTypeChange;
 			offValue/string;
 			onValue/string;
