--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -1,7 +1,7 @@
 <!--
 	ioBroker.vis time-switch Widget-Set
 
-	version: "2.1.0-pre.4"
+	version: "2.1.0"
 
 	Copyright 2019 walli545 walli5446@gmail.com
 
