--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -1,9 +1,9 @@
 <!--
 	ioBroker.vis time-switch Widget-Set
 
-	version: "2.2.0-pre.5"
+	version: "2.2.0"
 
-	Copyright 2019 walli545 walli5446@gmail.com
+	Copyright 2019-2021 walli545 walli5446@gmail.com
 
 	Change counter: 21
 -->
