OneTimeTrigger: Add gui in widget, fix deletion and add message to add new one time triggers

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -18,6 +18,7 @@
 <script src="widgets/time-switch/js/TriggerWithAction.js"></script>
 <script src="widgets/time-switch/js/TimeTrigger.js"></script>
 <script src="widgets/time-switch/js/AstroTrigger.js"></script>
+<script src="widgets/time-switch/js/OneTimeTrigger.js"></script>
 <script src="widgets/time-switch/js/Weekdays.js"></script>
 <script src="widgets/time-switch/js/OnOffStateAction.js"></script>
 <script src="widgets/time-switch/js/ConditionAction.js"></script>
