Change version to 2.3.0-pre.1

--- a/widgets/time-switch.html
+++ b/widgets/time-switch.html
@@ -1,11 +1,11 @@
 <!--
 	ioBroker.vis time-switch Widget-Set
 
-	version: "2.2.2"
+	version: "2.3.0-pre.1"
 
 	Copyright 2019-2021 walli545 walli5446@gmail.com
 
-	Change counter: 21
+	Change counter: 65
 -->
 <!-- here you can include so many css as you want -->
 <link rel="stylesheet" href="widgets/time-switch/css/style.css" />
